[project]
name = "my-deepagents-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aegra-cli>=0.8.2",
    "ag-ui-langgraph>=0.0.25",
    "ag-ui-protocol>=0.1.13",
    "annotated-types>=0.7.0",
    "anthropic>=0.84.0",
    "anyio>=4.12.1",
    "autopep8>=2.3.2",
    "black>=26.3.0",
    "blockbuster>=1.5.26",
    "bracex>=2.6",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.5",
    "click>=8.3.1",
    "cloudpickle>=3.1.2",
    "copilotkit>=0.1.78",
    "cryptography>=46.0.5",
    "deepagents>=0.4.8",
    "distro>=1.9.0",
    "docstring-parser>=0.17.0",
    "dotenv>=0.9.9",
    "et-xmlfile>=2.0.0",
    "fastapi>=0.115.14",
    "filetype>=1.2.0",
    "forbiddenfruit>=0.1.4",
    "google-auth>=2.49.0",
    "google-genai>=1.66.0",
    "googleapis-common-protos>=1.73.0",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "idna>=3.11",
    "importlib-metadata>=8.7.1",
    "iniconfig>=2.3.0",
    "jiter>=0.13.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema-rs>=0.44.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "langgraph-api>=0.7.69",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-cli>=0.4.15",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-runtime-inmem>=0.26.0",
    "langgraph-sdk>=0.3.11",
    "langsmith>=0.7.16",
    "mypy-extensions>=1.1.0",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "openpyxl>=3.1.5",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp-proto-common>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-proto>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-semantic-conventions>=0.61b0",
    "orjson>=3.11.7",
    "ormsgpack>=1.12.2",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "partialjson>=0.0.8",
    "pathspec>=1.0.4",
    "platformdirs>=4.9.4",
    "pluggy>=1.6.0",
    "protobuf>=6.33.5",
    "pyasn1>=0.6.2",
    "pyasn1-modules>=0.4.2",
    "pycodestyle>=2.14.0",
    "pycparser>=3.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pygments>=2.19.2",
    "pyjsparser>=2.7.1",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytokens>=0.4.1",
    "pyyaml>=6.0.3",
    "regex>=2026.2.28",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "rsa>=4.9.1",
    "setuptools>=82.0.1",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "sqlparse>=0.5.5",
    "sse-starlette>=3.0.3",
    "starlette>=0.46.2",
    "structlog>=25.5.0",
    "tavily-python>=0.7.23",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "toml>=0.10.2",
    "tqdm>=4.67.3",
    "truststore>=0.10.4",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.6.3",
    "uuid-utils>=0.14.1",
    "uvicorn>=0.41.0",
    "watchfiles>=1.1.1",
    "wcmatch>=10.1",
    "websockets>=16.0",
    "wheel>=0.46.3",
    "xxhash>=3.6.0",
    "zipp>=3.23.0",
    "zstandard>=0.25.0",
]
